debugging war deployment
disabled log4j override

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.1.5.RELEASE</version>
 	</parent>
-	
+	<properties>
+        <start-class>me.lytra.init.Application</start-class>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -100,5 +102,20 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>http://repo.spring.io/libs-release</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>http://repo.spring.io/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
