--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,14 @@
 			<artifactId>joda-time</artifactId>
 			<!-- <version>2.3</version> -->
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency> -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mindrot</groupId>
