removed provided on tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 	<groupId>lytra.me</groupId>
     <artifactId>lytra</artifactId>
     <version>0.1.0</version>
-    <packaging>war</packaging>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -43,7 +42,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<!-- <scope>provided</scope> -->
 		</dependency>
 		<!-- Needed for jsp apparently --> 
 		<dependency>
