--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+	    <dependency>
+	        <groupId>org.springframework.social</groupId>
+	        <artifactId>spring-social-facebook</artifactId>
+	        <version>2.0.0.M1</version>
+	    </dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
