--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.contextPath=/lytra
 server.port=8080
 spring.thymeleaf.cache=false
-facebook.app.id=
-facebook.app.secret=
+facebook.app.id=650771954994456
+facebook.app.secret=c3c91315adce7fd07e034b9b97133cc1
