--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,9 +17,9 @@ log4j.category.org.apache.catalina.startup.DigesterFactory=ERROR
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=logs/lytra_final.log
+log4j.appender.file.File=logs/lytra.log
 #log4j.appender.file.File=${catalina.base}/logs/lytra_final.log
-log4j.appender.file.MaxFileSize=20MB
+log4j.appender.file.MaxFileSize=50MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=${LOG_PATTERN}
