--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /.settings
 src/main/resources/application.properties
 src/main/resources/application.properties
+logs/lytra.log
+src/main/resources/application.properties
+src/main/resources/application.properties
