--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/main/resources/application.properties
 logs/lytra.log
 src/main/resources/application.properties
 src/main/resources/application.properties
+src/main/resources/application.properties
